--- a/.github/workflows/deuxfleurs.yml
+++ b/.github/workflows/deuxfleurs.yml
@@ -15,11 +15,11 @@ jobs:
       with:
         submodules: true
 
-    - name: Installation de Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-        cache: 'yarn'
+    # - name: Installation de Node
+    #   uses: actions/setup-node@v3
+    #   with:
+    #     node-version: '16'
+    #     cache: 'yarn'
 
     - name: Installation des dépendances JavaScript
       run: yarn install --frozen-lockfile
