--- a/.github/workflows/deuxfleurs.yml
+++ b/.github/workflows/deuxfleurs.yml
@@ -21,8 +21,8 @@ jobs:
     #     node-version: '16'
     #     cache: 'yarn'
 
-    - name: Installation des dépendances JavaScript
-      run: yarn install --frozen-lockfile
+    # - name: Installation des dépendances JavaScript
+    #   run: yarn install --frozen-lockfile
 
     - name: Installation de Hugo
       uses: peaceiris/actions-hugo@v2.6.0
