--- a/.github/workflows/deuxfleurs.yml
+++ b/.github/workflows/deuxfleurs.yml
@@ -15,14 +15,14 @@ jobs:
       with:
         submodules: true
 
-    # - name: Installation de Node
-    #   uses: actions/setup-node@v3
-    #   with:
-    #     node-version: '16'
-    #     cache: 'yarn'
+    - name: Installation de Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+        cache: 'yarn'
 
-    # - name: Installation des dépendances JavaScript
-    #   run: yarn install --frozen-lockfile
+    - name: Installation des dépendances JavaScript
+      run: yarn install --frozen-lockfile
 
     - name: Installation de Hugo
       uses: peaceiris/actions-hugo@v2.6.0
